Fix cypress (z-index issues)

--- a/src/instruments/layouts/App/styles.scss
+++ b/src/instruments/layouts/App/styles.scss
@@ -4,6 +4,7 @@
   position: relative;
   margin-top: -5.3rem;
   padding: 0 1% 15rem;
+  z-index: 100;
 }
 
 .fullHeight {
